# hackathon-ai-book

./: .gitignore  GEMINI.md  rag_spec.txt
.claude/: settings.local.json
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/tmp/: plan_args.txt
history/prompts/001-robotics-textbook-spec/: 0001-create-spec-for-robotics-textbook.spec.prompt.md  0002-create-plan-for-robotics-textbook.plan.prompt.md  0003-generate-tasks-for-robotics-textbook.tasks.prompt.md  0004-generate-content-for-robotics-textbook.green.prompt.md  0005-resolve-docusaurus-build-errors.red.prompt.md  0006-improve-docusaurus-ui.green.prompt.md
history/prompts/002-rag-chatbot/: 0001-create-spec-for-rag-chatbot.spec.prompt.md
history/prompts/constitution/: 0001-set-up-constitution-for-hackathon-textbook.constitution.prompt.md
my-robotics-textbook-project/: .gitignore  .prettierignore  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
my-robotics-textbook-project/docs/assessments/: index.mdx
my-robotics-textbook-project/docs/capstone-project/: index.mdx
my-robotics-textbook-project/docs/glossary/: index.mdx
my-robotics-textbook-project/docs/intro/: index.mdx
rag-chatbot-backend/: Dockerfile  ingest.py  main.py  pyproject.toml  requirements.txt
rag-chatbot-backend/app/: db.py  llm.py  main.py  models.py  schemas.py  vector_store.py
rag-chatbot-backend/app/agent/: agent.py  setupconfig.py  tools.py
rag-chatbot-backend/app/crawler/: crawler.py
rag-chatbot-backend/app/db/: qdrant_client.py
rag-chatbot-backend/app/rag/: rag.py
specs/001-robotics-textbook-spec/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-rag-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+34 files in other folders)
